public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1746/source/compile
source.c: In function ‘main’:
source.c:19:1: error: expected declaration or statement at end of input
 }
 ^
